JON-- Guarda y actualiza incidencia
