# Backend/swagger_output.json
@@ -161,6 +161,11 @@
         "description": "",
         "parameters": [
           {
+            "name": "idIncidencia",
+            "in": "query",
+            "type": "string"
+          },
+          {
             "name": "description",
             "in": "query",
             "type": "string"
